# vcs

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
src/daemon/: main.cpp
src/lib/: linux-vcs.c  vcs.h
